[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/audio_manager_nekoto/MusicManager.gd" type="Script" id=1]

[node name="MusicManager" type="Node"]
script = ExtResource( 1 )

[node name="Music1" type="AudioStreamPlayer" parent="."]
volume_db = -80.0

[node name="Music2" type="AudioStreamPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
